# QuantGist_MCP

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  claude_desktop_config_example.json  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  docker-build.yml
deploy/: compose.host.yml  traefik-mcp.yml
src/quantgist_mcp/: __init__.py  api.py  discovery.py  formatters.py  http.py  server.py
