[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantgist-mcp"
version = "0.1.0"
description = "MCP server — exposes QuantGist macro event tools to Claude and AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "QuantGist", email = "dev@quantgist.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
quantgist-mcp = "quantgist_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantgist_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"
