[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantgist-mcp"
version = "0.3.1"
description = "MCP server — exposes QuantGist macro event tools to Claude and AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "QuantGist", email = "dev@quantgist.com" }]
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "quantgist", "trading", "economic-calendar", "earnings", "claude"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]

[project.urls]
Homepage = "https://quantgist.com"
Repository = "https://github.com/QuantGist-Technologies/QuantGist_MCP"
Documentation = "https://quantgist.com/docs"

[project.scripts]
quantgist-mcp = "quantgist_mcp.server:main"
quantgist-mcp-http = "quantgist_mcp.http:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantgist_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"
